tekton-prueba/network/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: el
  namespace: tekton
  labels:
    app.kubernetes.io/managed-by: EventListener
    app.kubernetes.io/part-of: Triggers
    eventlistener: prueba-listener
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: el-tekton.apps.ocp01-noprod.ocplasegunda-np.com.ar
  to:
    kind: Service
    name: el-prueba-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
